--- a/style.css
+++ b/style.css
@@ -245,6 +245,8 @@ ul li a:hover {
     margin: auto;
     margin-top: 50px;
     overflow: hidden;
+    position: relative;
+    z-index: -2;
     background-image: url(./image/bckk.png);
 }
 
@@ -388,6 +390,8 @@ ul li a:hover {
     gap: 20px;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: -2;
 }
 
 .zakas1 {
